--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Simple and Intuitive world-class EMR platform for Private Practices and Clinics, Allied Health Practitioners and Hospitals">
     <link rel='icon' href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Serenity Health — Provider Portal</title>
   </head>
   <body>
     <noscript>
